overlays/prod/image-patch.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
spec:
  template:
    spec:
      containers:
        - name: devops-app
          image: ghcr.io/hugpaim/devops-lab-app:sha-abc1234
          imagePullPolicy: IfNotPresent
