overlays/prod/resources.patch.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
spec:
  template:
    spec:
      containers:
        - name: devops-app
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
